objects/ASI_CRM_OutletPromoter__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <label>Outlet</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Promoters</relationshipLabel>
        <relationshipName>ASI_CRM_OutletPromoters_Outlet</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PGLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PG Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Promoters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promoter__c</fullName>
        <label>Promoter</label>
        <referenceTo>ASI_CRM_Promoter__c</referenceTo>
        <relationshipLabel>Outlets</relationshipLabel>
        <relationshipName>ASI_CRM_OutletPromoter_Outlets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Outlet Promoter</label>
    <nameField>
        <displayFormat>OP-{YY}{000000}</displayFormat>
        <label>Outlet Promoter No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outlet Promoters</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_OutletPromoter</fullName>
        <active>true</active>
        <label>VN Outlet Promoter</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>